<resources>
    <string name="app_name">电磁兼容案例库</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title">"电磁兼容案例库"</string>
    <string name="btn_name1">"首页"</string>
    <string name="btn_name2">"案例"</string>
    <string name="btn_name3">"新闻"</string>
    <string name="btn_name4">"我"</string>
    <string-array name="home_array">
        <item>电磁兼容</item>
        <item>EMC技术</item>
        <item>EMC设计</item>
        <item>EMC测试</item>

    </string-array>
    <string name="tech_activity_name">前沿技术</string>
    <string name="history_activity_name">电磁兼容案例库历史记录</string>
    <string name="history_name">历史记录</string>
    <string name="collection_name">我的收藏</string>
    <string name="night_name">夜间模式</string>
    <string name="day_name">日间模式</string>
    <string name="clean_name">消除缓存</string>
    <string name="feedback_name">用户反馈</string>
    <string name="setting_name">设置</string>
    <string name="btn_skip">跳过</string>
    <string name="login">登录</string>
    <string name="phone">请输入您的电话号码</string>
    <string name="password">请输入您的密码</string>
    <string name="use_third_account">第三方账号登录</string>
    <string name="create_account">创建账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_rule">用户协议</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="reset_pwd">重置密码</string>
</resources>