<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#fff">
        <ImageView
            android:id="@+id/iv_me_login"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击头像登录"
            android:textSize="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_history"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_history_selector"/>
        <TextView
            style="@style/meFrag_tv_style"
            android:text="@string/history_name" />
    </LinearLayout>
    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#4000"
        android:layout_gravity="center"/>
    <LinearLayout
        android:id="@+id/ll_collection"
        android:padding="5dp"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_collection_selector"/>
        <TextView
            style="@style/meFrag_tv_style"
            android:text="@string/collection_name" />
    </LinearLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#4000"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/ll_night_mode"
        android:padding="5dp"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_night_img"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_night_pre"/>
        <TextView
            android:id="@+id/tv_night_text"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_name"
            android:textSize="15sp"/>
    </LinearLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#4000"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/ll_clean"
        android:padding="5dp"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_clean_selector"/>
        <TextView
            style="@style/meFrag_tv_style"
            android:text="@string/clean_name" />
    </LinearLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#4000"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:padding="5dp"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:clickable="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_feedback_selector"/>
        <TextView
            style="@style/meFrag_tv_style"
            android:text="@string/feedback_name" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_setting"
        android:padding="5dp"
        android:onClick="onClick"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_setting_selector"/>
        <TextView
            style="@style/meFrag_tv_style"
            android:text="@string/setting_name" />
    </LinearLayout>

</LinearLayout>